--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -61,12 +61,11 @@
 <body>
     <div class="container">
         <h2>Create Account</h2>
-        <form method="post">
+        <form method="post" acction="{% url "create_account" %}">
             {% csrf_token %}
             
             <label for="id_username">Username:</label>
             <input type="text" name="username" id="id_username" required>
-            
             
             <label for="id_password">Password:</label>
             <input type="password" name="password" id="id_password" required>
@@ -82,7 +81,7 @@
             
             <label for="id_role">Role:</label>
             <select name="role" id="id_role" required>
-                {% for role in user_form.fields.role.queryset %}
+                {% for role in roles %}
                     <option value="{{ role.pk }}">{{ role.name }}</option>
                 {% endfor %}
             </select>
