--- a/templates/login.html
+++ b/templates/login.html
@@ -113,8 +113,8 @@
                     <h2>Login</h2>
                     <div class="inputbox">
                         <ion-icon name="mail-outline"></ion-icon>
-                        <input type="email" name="email" required>
-                        <label for="">Email</label>
+                        <input type="text" name="username" required>
+                        <label for="">Username</label>
                     </div>
                     <div class="inputbox">
                         <ion-icon name="lock-closed-outline"></ion-icon>
