--- a/templates/register.html
+++ b/templates/register.html
@@ -124,8 +124,8 @@
                     <div class="form-value-container">
                         <div class="inputbox">
                             <ion-icon name="mail-outline"></ion-icon>
-                            <input type="email" name="email" required>
-                            <label for="">Email</label>
+                            <input type="text" name="username" required>
+                            <label for="">Username</label>
                         </div>
                         <div class="inputbox">
                             <ion-icon name="text-outline"></ion-icon>
