--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,11 +1,38 @@
+{%load static%}
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Upload Contribution</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="TemplateMo" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900"
+      rel="stylesheet"
+    />
+
+    <title>Education Meeting HTML5 Template</title>
+
+    <!-- Bootstrap core CSS -->
+    <link
+      href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="{% static 'css/fontawesome.css' %}" />
+    <link
+      rel="stylesheet"
+      href="{% static 'css/templatemo-edu-meeting.css' %}"
+    />
+    <link rel="stylesheet" href="{% static 'css/owl.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/lightbox.css' %}" />
   </head>
 
   <style>
-    body {
+    container {
       font-family: "Arial", sans-serif;
       background-color: #f5f5f5;
       padding: 20px;
@@ -70,46 +97,224 @@
       cursor: not-allowed;
     }
   </style>
-  <body onload="toggleUploadButton()">
-    <h2>Upload Contribution</h2>
-    <form method="post" enctype="multipart/form-data">
-      {% csrf_token %}
+  <body>
+    <!-- Sub Header -->
+    <div class="sub-header">
+      <div class="container">
+        <div class="row">
+          {% comment %}
+          <div class="col-lg-8 col-sm-8">
+            <div class="left-content">
+              <p>
+                This is an educational <em>HTML CSS</em> template by TemplateMo
+                website.
+              </p>
+            </div>
+          </div>
+          {% endcomment %} {% comment %}
+          <div class="col-lg-4 col-sm-4">
+            <div class="right-icons">
+              <ul>
+                <li>
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa fa-behance"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          {% endcomment %}
+        </div>
+      </div>
+    </div>
 
-      <label for="id_title">Title:</label>
-      <input type="text" name="title" id="id_title" required />
+    <!-- ***** Header Area Start ***** -->
+    <header class="header-area header-sticky">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav class="main-nav">
+              <!-- ***** Logo Start ***** -->
+              <a href="index.html" class="logo"> Edu Meeting </a>
+              <!-- ***** Logo End ***** -->
+              <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+                <li>
+                  <a href="{% url 'home' %}" class="active">Home</a>
+                </li>
+                <li><a href="meetings.html">Meetings</a></li>
+                <li class="scroll-to-section">
+                  <a href="#apply">Apply Now</a>
+                </li>
+                <li class="has-sub">
+                  <a href="javascript:void(0)">Pages</a>
+                  <ul class="sub-menu">
+                    {%for f in faculties%}
+                    <li>
+                      <a href="{%url 'faculty_files' f.id%}">{{f.name}}</a>
+                    </li>
+                    {%endfor%}
+                  </ul>
+                </li>
+                <li><a href="{% url 'file_upload'%}">Upload file</a></li>
+                {% if user.is_authenticated %}
+                <!-- Display the form or user-specific content -->
+                <li><a href="#courses">hello {{request.user.username}}</a></li>
+                <li><a href="{% url 'logout'%}">Logout</a></li>
 
-      <label for="id_content">Content:</label>
-      <textarea name="content" id="id_content" required></textarea>
+                {% else %}
+                <li><a href="{% url 'login' %}">Login</a></li>
+                {% endif %}
+              </ul>
+              <a class="menu-trigger">
+                <span>Menu</span>
+              </a>
+              <!-- ***** Menu End ***** -->
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- ***** Header Area End ***** -->
 
-      <label for="id_faculty">Faculty:</label>
-      <select name="faculty" id="id_faculty" required>
-        {% for faculty in faculties %}
-        <option value="{{ faculty.pk }}">{{ faculty.name }}</option>
-        {% endfor %}
-      </select>
+    <section class="apply-now" id="apply">
+      <div class="container">
+        <section onload="toggleUploadButton()">
+          <!-- Call the function on page load to set the initial state of the button -->
+          <h2 class="text-center text-white" style="margin: 20px">
+            Upload Contribution
+          </h2>
+          <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
 
-      <label for="id_word">Word Document (optional):</label>
-      <input type="file" name="word" id="id_word" accept=".doc, .docx" />
+            <label for="id_title">Title:</label>
+            <input type="text" name="title" id="id_title" required />
 
-      <label for="id_img">Image (optional):</label>
-      <input type="file" name="img" id="id_img" accept="image/*" />
+            <label for="id_content">Content:</label>
+            <textarea name="content" id="id_content" required></textarea>
 
-      <label for="id_term" name="term">Term:</label>
-      <input
-        type="checkbox"
-        name="term"
-        id="id_term"
-        onclick="toggleUploadButton()"
-      />
+            <label for="id_faculty">Faculty:</label>
+            <select name="faculty" id="id_faculty" required>
+              {% for faculty in faculties %}
+              <option value="{{ faculty.pk }}">{{ faculty.name }}</option>
+              {% endfor %}
+            </select>
 
-      <input type="submit" value="Upload" id="uploadButton" />
-    </form>
+            <label for="id_word">Word Document (optional):</label>
+            <input type="file" name="word" id="id_word" accept=".doc, .docx" />
+
+            <label for="id_img">Image (optional):</label>
+            <input type="file" name="img" id="id_img" accept="image/*" />
+
+            <label for="id_term" name="term">Term:</label>
+            <input
+              type="checkbox"
+              name="term"
+              id="id_term"
+              onclick="toggleUploadButton()"
+            />
+
+            <input type="submit" value="Upload" id="uploadButton" />
+          </form>
+        </section>
+      </div>
+    </section>
+    <section class="contact-us" id="contact">
+      <div class="footer">
+        <p>
+          Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
+          <br />
+          Design:
+          <a
+            href="https://templatemo.com"
+            target="_parent"
+            title="free css templates"
+            >TemplateMo</a
+          >
+          <br />
+          Distibuted By:
+          <a
+            href="https://themewagon.com"
+            target="_blank"
+            title="Build Better UI, Faster"
+            >ThemeWagon</a
+          >
+        </p>
+      </div>
+    </section>
+
+    <!-- Scripts -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="{%static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{%static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+
+    <script src="{%static 'js/isotope.min.js' %}"></script>
+    <script src="{%static 'js/owl-carousel.js' %}"></script>
+    <script src="{%static 'js/lightbox.js' %}"></script>
+    <script src="{%static 'js/tabs.js' %}"></script>
+    <script src="{%static 'js/video.js' %}"></script>
+    <script src="{%static 'js/slick-slider.js' %}"></script>
+    <script src="{%static 'js/custom.js' %}"></script>
+    <script>
+      //according to loftblog tut
+      $(".nav li:first").addClass("active");
+
+      var showSection = function showSection(section, isAnimate) {
+        var direction = section.replace(/#/, ""),
+          reqSection = $(".section").filter(
+            '[data-section="' + direction + '"]'
+          ),
+          reqSectionPos = reqSection.offset().top - 0;
+
+        if (isAnimate) {
+          $("body, html").animate(
+            {
+              scrollTop: reqSectionPos,
+            },
+            800
+          );
+        } else {
+          $("body, html").scrollTop(reqSectionPos);
+        }
+      };
+
+      var checkSection = function checkSection() {
+        $(".section").each(function () {
+          var $this = $(this),
+            topEdge = $this.offset().top - 80,
+            bottomEdge = topEdge + $this.height(),
+            wScroll = $(window).scrollTop();
+          if (topEdge < wScroll && bottomEdge > wScroll) {
+            var currentId = $this.data("section"),
+              reqLink = $("a").filter("[href*=\\#" + currentId + "]");
+            reqLink
+              .closest("li")
+              .addClass("active")
+              .siblings()
+              .removeClass("active");
+          }
+        });
+      };
+
+      $(".main-menu, .responsive-menu, .scroll-to-section").on(
+        "click",
+        "a",
+        function (e) {
+          e.preventDefault();
+          showSection($(this).attr("href"), true);
+        }
+      );
+
+      $(window).scroll(function () {
+        checkSection();
+      });
+    </script>
   </body>
-
-  <script>
-    function toggleUploadButton() {
-      var isChecked = document.getElementById("id_term").checked;
-      document.getElementById("uploadButton").disabled = !isChecked;
-    }
-  </script>
 </html>
